--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.30.0",
     "react-scripts": "^5.0.1",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "serve": "^14.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
